--- a/LogycaApp/AndroidManifest.xml
+++ b/LogycaApp/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="com.logyca.app.SplashActivity"
             android:label="@string/app_name" >
@@ -21,6 +21,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.logyca.app.LoginActivity"
+            android:label="@string/title_activity_login" >
         </activity>
     </application>
 
