--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.NFC"/>
+	<uses-feature
+    	android:name="android.hardware.nfc"
+    	android:required="true" />
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -32,7 +36,16 @@
         <activity android:name="com.facebook.LoginActivity" />
         <activity
             android:name="com.logyca.LoginActivity"
-            android:label="@string/title_activity_login">
+            android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name="com.logyca.NFCReaderActivity"
+            android:label="@string/title_activity_nfcreader" >
+            <intent-filter>
+            	<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
+    			<category android:name="android.intent.category.DEFAULT"/>
+    			<data android:mimeType="text/plain" />
+            </intent-filter>
         </activity>
     </application>
 
