--- a/LogycaApp/AndroidManifest.xml
+++ b/LogycaApp/AndroidManifest.xml
@@ -18,12 +18,37 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.logyca.app.LoginActivity"
             android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name="com.logyca.app.NewsActivity"
+            android:label="@string/title_activity_news" >
+        </activity>
+        <activity
+            android:name="com.logyca.app.NewsActivityListActivity"
+            android:label="@string/title_newsactivity_list" >
+        </activity>
+        <activity
+            android:name="com.logyca.app.NewsActivityDetailActivity"
+            android:label="@string/title_newsactivity_detail"
+            android:parentActivityName="com.logyca.app.NewsActivityListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.logyca.app.NewsActivityListActivity" />
+        </activity>
+        <activity
+            android:name="com.logyca.app.DescriptionActivity"
+            android:label="@string/title_activity_description" >
+        </activity>
+        <activity
+            android:name="com.logyca.app.TrendsActivity"
+            android:label="@string/title_activity_trends" >
         </activity>
     </application>
 
