--- a/LogycaApp/AndroidManifest.xml
+++ b/LogycaApp/AndroidManifest.xml
@@ -18,12 +18,21 @@
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.logyca.app.LoginActivity"
             android:label="@string/title_activity_login" >
+        </activity>
+        <activity
+            android:name="com.logyca.app.RegistrationActivity"
+            android:label="@string/title_activity_registration" >
+        </activity>
+        <activity
+            android:name="com.logyca.app.InterestSelectionActivity"
+            android:label="@string/title_activity_interest_selection" >
         </activity>
     </application>
 
