--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -34,13 +34,12 @@
             android:value="@string/app_id" />
 
         <activity android:name="com.facebook.LoginActivity" />
-        <activity
-            android:name="com.logyca.LoginActivity"
+        <activity android:name="com.logyca.LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
-        <activity
-            android:name="com.logyca.NFCReaderActivity"
-            android:label="@string/title_activity_nfcreader" >
+        <activity android:name="com.logyca.NFCReaderActivity"
+            android:label="@string/title_activity_nfcreader" 
+            android:screenOrientation="portrait" >
             <intent-filter>
             	<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
     			<category android:name="android.intent.category.DEFAULT"/>
