--- a/Logyca/project.properties
+++ b/Logyca/project.properties
@@ -14,3 +14,4 @@
 target=android-19
 android.library.reference.1=..\\..\\..\\development\\facebook-android-sdk-3.8.0\\facebook
 android.library.reference.2=../../../../Desktop/facebook-android-sdk-3.8.0/facebook
+android.library.reference.3=../../../development/facebook-android-sdk-3.8.0/facebook
