--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -13,6 +13,7 @@
 	<uses-feature
     	android:name="android.hardware.nfc"
     	android:required="true" />
+	<uses-permission android:name="android.permission.VIBRATE"/>
     
     <application
         android:allowBackup="true"
