--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.NFC"/>
-	<uses-feature
-    	android:name="android.hardware.nfc"
-    	android:required="true" />
-	<uses-permission android:name="android.permission.VIBRATE"/>
-    
+    <uses-permission android:name="android.permission.NFC" />
+
+    <uses-feature
+        android:name="android.hardware.nfc"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -35,17 +37,49 @@
             android:value="@string/app_id" />
 
         <activity android:name="com.facebook.LoginActivity" />
-        <activity android:name="com.logyca.LoginActivity"
+        <activity
+            android:name="com.logyca.LoginActivity"
             android:label="@string/title_activity_login" >
         </activity>
-        <activity android:name="com.logyca.NFCReaderActivity"
-            android:label="@string/title_activity_nfcreader" 
+        <activity
+            android:name="com.logyca.NFCReaderActivity"
+            android:label="@string/title_activity_nfcreader"
             android:screenOrientation="portrait" >
             <intent-filter>
-            	<action android:name="android.nfc.action.NDEF_DISCOVERED"/>
-    			<category android:name="android.intent.category.DEFAULT"/>
-    			<data android:mimeType="text/plain" />
+                <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+
+                <data android:mimeType="text/plain" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.logyca.NewsActivity"
+            android:label="@string/title_activity_news" >
+        </activity>
+        <activity
+            android:name="com.logyca.NewsActivityListActivity"
+            android:label="@string/title_newsactivity_list" >
+        </activity>
+        <activity
+            android:name="com.logyca.NewsActivityDetailActivity"
+            android:label="@string/title_newsactivity_detail"
+            android:parentActivityName="com.logyca.app.NewsActivityListActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.logyca.app.NewsActivityListActivity" />
+        </activity>
+        <activity
+            android:name="com.logyca.DescriptionActivity"
+            android:label="@string/title_activity_description" >
+        </activity>
+        <activity
+            android:name="com.logyca.TrendsActivity"
+            android:label="@string/title_activity_trends" >
+        </activity>
+        <activity
+            android:name="com.logyca.HomeActivity"
+            android:label="@string/title_activity_home" >
         </activity>
     </application>
 
