--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -21,10 +21,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
+        android:theme="@style/AppTheme" >
         <activity
-            android:name="com.logyca.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.logyca.SplashActivity"
+            android:label="@string/app_name" 
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -47,9 +49,7 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
-
                 <category android:name="android.intent.category.DEFAULT" />
-
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
@@ -80,6 +80,11 @@
         <activity
             android:name="com.logyca.HomeActivity"
             android:label="@string/title_activity_home" >
+        </activity>
+         <activity
+            android:name="com.logyca.MainActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"  >
         </activity>
     </application>
 
