--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.NFC" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <uses-feature
         android:name="android.hardware.nfc"
@@ -25,7 +25,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.logyca.SplashActivity"
-            android:label="@string/app_name" 
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <intent-filter>
@@ -82,10 +82,18 @@
             android:name="com.logyca.HomeActivity"
             android:label="@string/title_activity_home" >
         </activity>
-         <activity
+        <activity
             android:name="com.logyca.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"  >
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name="com.logyca.QRReaderActivity"
+            android:label="@string/title_activity_qrreader" >
+            <intent-filter>
+      			<action android:name="com.google.zxing.client.android.SCAN"/>
+      			<category android:name="android.intent.category.DEFAULT"/>
+    		</intent-filter>
         </activity>
     </application>
 
