--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:targetSdkVersion="19" />
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.NFC" />
     <uses-permission android:name="android.permission.CAMERA" />
 
@@ -50,7 +51,9 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.nfc.action.NDEF_DISCOVERED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
+
                 <data android:mimeType="text/plain" />
             </intent-filter>
         </activity>
@@ -89,12 +92,16 @@
         </activity>
         <activity
             android:name="com.logyca.QRReaderActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_qrreader" >
+            android:label="@string/title_activity_qrreader"
+            android:screenOrientation="portrait" >
             <intent-filter>
-      			<action android:name="com.google.zxing.client.android.SCAN"/>
-      			<category android:name="android.intent.category.DEFAULT"/>
-    		</intent-filter>
+                <action android:name="com.google.zxing.client.android.SCAN" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.logyca.RegisterActivity"
+            android:label="@string/title_activity_register" >
         </activity>
     </application>
 
