--- a/Logyca/AndroidManifest.xml
+++ b/Logyca/AndroidManifest.xml
@@ -88,8 +88,7 @@
         </activity>
         <activity
             android:name="com.logyca.MainActivity"
-            android:label="@string/app_name"
-            >
+            android:label="@string/app_name" >
         </activity>
         <activity
             android:name="com.logyca.QRReaderActivity"
@@ -97,12 +96,17 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="com.google.zxing.client.android.SCAN" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
         <activity
             android:name="com.logyca.RegisterActivity"
             android:label="@string/title_activity_register" >
+        </activity>
+        <activity
+            android:name="com.logyca.InteresesActivity"
+            android:label="@string/title_activity_intereses" >
         </activity>
     </application>
 
